# flowinn_torch

./: .gitignore  pyproject.toml  readme.md
flowinn_torch/mesh/: boundary_handler.py  checker.py  geometry.py  mesh.py  meshio.py  sampler.py  visualizer.py
flowinn_torch/models/: model.py
flowinn_torch/nn/: architectures.py
flowinn_torch/physics/: boundary_conditions.py  navier_stokes.py  steady_2D.py  steady_3D.py
flowinn_torch/plot/: boundary_visualization.py  plot.py  postprocess.py
flowinn_torch/tests/: FlowOverAirfoil.py
flowinn_torch/training/: base_loss.py  loss.py  steady_loss.py  unsteady_loss.py
jupyterNotebook/: FlowOverAirfoil.ipynb  FlowOverAirfoil_AoA_5.0.csv
